[gd_scene load_steps=4 format=3 uid="uid://uu25grierx8r"]

[ext_resource type="FontFile" uid="uid://cicppa12acwpw" path="res://resources/fonts/alagard.ttf" id="1_7g0ee"]
[ext_resource type="Script" path="res://unit_type_almanac/unit_type_full_stat_container.gd" id="2_60uux"]

[sub_resource type="Theme" id="Theme_ds58m"]
default_font = ExtResource("1_7g0ee")

[node name="UnitTypeFullStatContainer" type="VBoxContainer"]
custom_minimum_size = Vector2(255, 200)
offset_right = 255.0
offset_bottom = 257.0
theme = SubResource("Theme_ds58m")
script = ExtResource("2_60uux")

[node name="StatHeaderContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8

[node name="BaseStatHeader" type="Label" parent="StatHeaderContainer"]
custom_minimum_size = Vector2(40, 25)
layout_mode = 2
text = "Base"

[node name="MaxStatHeader" type="Label" parent="StatHeaderContainer"]
custom_minimum_size = Vector2(50, 25)
layout_mode = 2
text = "Max"
horizontal_alignment = 2

[node name="GrowthHeader" type="Label" parent="StatHeaderContainer"]
self_modulate = Color(0.509804, 0.509804, 0.509804, 1)
custom_minimum_size = Vector2(75, 25)
layout_mode = 2
text = "Growth"
horizontal_alignment = 2

[node name="HealthContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="HealthHeaderLabel" type="Label" parent="HealthContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "Health"

[node name="ValueContainer" type="HBoxContainer" parent="HealthContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="BaseValueLabel" type="Label" parent="HealthContainer/ValueContainer"]
custom_minimum_size = Vector2(40, 25)
layout_mode = 2
text = "12"
horizontal_alignment = 2

[node name="MaxValueLabel" type="Label" parent="HealthContainer/ValueContainer"]
custom_minimum_size = Vector2(50, 25)
layout_mode = 2
text = "123"
horizontal_alignment = 2

[node name="GrowthValueLabel" type="Label" parent="HealthContainer/ValueContainer"]
self_modulate = Color(0.509804, 0.509804, 0.509804, 1)
custom_minimum_size = Vector2(75, 25)
layout_mode = 2
text = "123"
horizontal_alignment = 2

[node name="StrengthContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="HeaderLabel" type="Label" parent="StrengthContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "Strength"

[node name="ValueContainer" type="HBoxContainer" parent="StrengthContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="BaseValueLabel" type="Label" parent="StrengthContainer/ValueContainer"]
custom_minimum_size = Vector2(40, 25)
layout_mode = 2
text = "12"
horizontal_alignment = 2

[node name="MaxValueLabel" type="Label" parent="StrengthContainer/ValueContainer"]
custom_minimum_size = Vector2(50, 25)
layout_mode = 2
text = "123"
horizontal_alignment = 2

[node name="GrowthValueLabel" type="Label" parent="StrengthContainer/ValueContainer"]
self_modulate = Color(0.509804, 0.509804, 0.509804, 1)
custom_minimum_size = Vector2(75, 25)
layout_mode = 2
text = "123"
horizontal_alignment = 2

[node name="MagicContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="HeaderLabel" type="Label" parent="MagicContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "Magic"

[node name="ValueContainer" type="HBoxContainer" parent="MagicContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="BaseValueLabel" type="Label" parent="MagicContainer/ValueContainer"]
custom_minimum_size = Vector2(40, 25)
layout_mode = 2
text = "12"
horizontal_alignment = 2

[node name="MaxValueLabel" type="Label" parent="MagicContainer/ValueContainer"]
custom_minimum_size = Vector2(50, 25)
layout_mode = 2
text = "123"
horizontal_alignment = 2

[node name="GrowthValueLabel" type="Label" parent="MagicContainer/ValueContainer"]
self_modulate = Color(0.509804, 0.509804, 0.509804, 1)
custom_minimum_size = Vector2(75, 25)
layout_mode = 2
text = "123"
horizontal_alignment = 2

[node name="SkillContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="HeaderLabel" type="Label" parent="SkillContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "Skill"

[node name="ValueContainer" type="HBoxContainer" parent="SkillContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="BaseValueLabel" type="Label" parent="SkillContainer/ValueContainer"]
custom_minimum_size = Vector2(40, 25)
layout_mode = 2
text = "12"
horizontal_alignment = 2

[node name="MaxValueLabel" type="Label" parent="SkillContainer/ValueContainer"]
custom_minimum_size = Vector2(50, 25)
layout_mode = 2
text = "123"
horizontal_alignment = 2

[node name="GrowthValueLabel" type="Label" parent="SkillContainer/ValueContainer"]
self_modulate = Color(0.509804, 0.509804, 0.509804, 1)
custom_minimum_size = Vector2(75, 25)
layout_mode = 2
text = "123"
horizontal_alignment = 2

[node name="SpeedContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="HeaderLabel" type="Label" parent="SpeedContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "Speed"

[node name="ValueContainer" type="HBoxContainer" parent="SpeedContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="BaseValueLabel" type="Label" parent="SpeedContainer/ValueContainer"]
custom_minimum_size = Vector2(40, 25)
layout_mode = 2
text = "12"
horizontal_alignment = 2

[node name="MaxValueLabel" type="Label" parent="SpeedContainer/ValueContainer"]
custom_minimum_size = Vector2(50, 25)
layout_mode = 2
text = "123"
horizontal_alignment = 2

[node name="GrowthValueLabel" type="Label" parent="SpeedContainer/ValueContainer"]
self_modulate = Color(0.509804, 0.509804, 0.509804, 1)
custom_minimum_size = Vector2(75, 25)
layout_mode = 2
text = "123"
horizontal_alignment = 2

[node name="LuckContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="HeaderLabel" type="Label" parent="LuckContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "Luck"

[node name="ValueContainer" type="HBoxContainer" parent="LuckContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="BaseValueLabel" type="Label" parent="LuckContainer/ValueContainer"]
custom_minimum_size = Vector2(40, 25)
layout_mode = 2
text = "12"
horizontal_alignment = 2

[node name="MaxValueLabel" type="Label" parent="LuckContainer/ValueContainer"]
custom_minimum_size = Vector2(50, 25)
layout_mode = 2
text = "123"
horizontal_alignment = 2

[node name="GrowthValueLabel" type="Label" parent="LuckContainer/ValueContainer"]
self_modulate = Color(0.509804, 0.509804, 0.509804, 1)
custom_minimum_size = Vector2(75, 25)
layout_mode = 2
text = "123"
horizontal_alignment = 2

[node name="DefenseContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="HeaderLabel" type="Label" parent="DefenseContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "Defense"

[node name="ValueContainer" type="HBoxContainer" parent="DefenseContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="BaseValueLabel" type="Label" parent="DefenseContainer/ValueContainer"]
custom_minimum_size = Vector2(40, 25)
layout_mode = 2
text = "12"
horizontal_alignment = 2

[node name="MaxValueLabel" type="Label" parent="DefenseContainer/ValueContainer"]
custom_minimum_size = Vector2(50, 25)
layout_mode = 2
text = "123"
horizontal_alignment = 2

[node name="GrowthValueLabel" type="Label" parent="DefenseContainer/ValueContainer"]
self_modulate = Color(0.509804, 0.509804, 0.509804, 1)
custom_minimum_size = Vector2(75, 25)
layout_mode = 2
text = "123"
horizontal_alignment = 2

[node name="ResistanceContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="HeaderLabel" type="Label" parent="ResistanceContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "Resistance"

[node name="ValueContainer" type="HBoxContainer" parent="ResistanceContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="BaseValueLabel" type="Label" parent="ResistanceContainer/ValueContainer"]
custom_minimum_size = Vector2(40, 25)
layout_mode = 2
text = "12"
horizontal_alignment = 2

[node name="MaxValueLabel" type="Label" parent="ResistanceContainer/ValueContainer"]
custom_minimum_size = Vector2(50, 25)
layout_mode = 2
text = "123"
horizontal_alignment = 2

[node name="GrowthValueLabel" type="Label" parent="ResistanceContainer/ValueContainer"]
self_modulate = Color(0.509804, 0.509804, 0.509804, 1)
custom_minimum_size = Vector2(75, 25)
layout_mode = 2
text = "123"
horizontal_alignment = 2
